<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:paddingBottom="@dimen/standard_padding"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:titleTextColor="@android:color/white">

        <TextView
            android:id="@+id/app_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>
    <!-- Scoreboard -->
    <LinearLayout
        android:id="@+id/scoreboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/team_one_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="@dimen/standard_padding"
            android:textColor="@android:color/white"
            android:textSize="85sp"
            tools:text="10" />

        <TextView
            android:id="@+id/team_two_score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center_horizontal"
            android:padding="@dimen/standard_padding"
            android:textColor="@color/colorPrimary"
            android:textSize="85sp"
            tools:text="35" />
    </LinearLayout>
    <!-- Button Group -->
    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@android:color/black"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/standard_padding">

        <LinearLayout
            android:id="@+id/team_one_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/standard_padding"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/team_one_td"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/td_button_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/team_one_fg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/fg_button_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/team_one_sfty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/sfty_button_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/team_one_xpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/xpt_button_text"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/team_two_buttons"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/standard_padding"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/team_two_td"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/td_button_text"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/team_two_fg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/fg_button_text"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/team_two_sfty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/sfty_button_text"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/team_two_xpt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:text="@string/xpt_button_text"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
    <!-- Reset Button -->
    <Button
        android:id="@+id/reset"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/standard_padding"
        android:layout_marginRight="@dimen/standard_padding"
        android:layout_weight="2"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/reset_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/reset_text_size"
        android:textStyle="bold" />
</LinearLayout>